--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
   <title>Isaias | Desenvolvedor Web & Jogos</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #09d3ac;
-      --secondary: #23232e;
-      --background: #181820;
-      --text: #f1f1f1;
-      --card: #22222d;
-      --accent: #ffce00;
-    }
+:root {
+  --primary: #ff00ff;      
+  --secondary: #1b1b2f;     
+  --background: #0d0d1a;    
+  --text: #f0f0f5;         
+  --card: #1a1a33;          
+  --accent: #00ffff; 
+}
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
     body {
-      background: var(--background);
-      color: var(--text);
-      font-family: 'Montserrat', Arial, sans-serif;
-      min-height: 100vh;
-    }
+  background: linear-gradient(135deg, #0d0d1a, #1b1b2f, #2a0a3a);
+  color: var(--text);
+  font-family: 'Montserrat', Arial, sans-serif;
+  min-height: 100vh;
+  transition: background 0.5s;
+}
     header {
       background: var(--secondary);
       padding: 3rem 0 2rem 0;
@@ -203,4 +204,5 @@
     © 2025 Isaias.
   </footer>
 </body>
+
 </html>
